update swagger get all product type
