# internal/api/routers/productType.go
@@ -10,8 +10,9 @@ func ProductTypeRouter(api *gin.RouterGroup, middleware middleware.Middleware, P
 	apiProductType := api.Group("/product-types")
 	{
 		apiProductType.POST("", middleware.AuthMiddleware("MANAGE_PRODUCT.PRODUCT.CREATE", false, false), ProductTypeHandler.CreateProductType)
+		apiProductType.GET("", middleware.AuthMiddleware("1", true, false), ProductTypeHandler.GetAllProductType)
 		apiProductType.GET("/:id", middleware.AuthMiddleware("1", true, false), ProductTypeHandler.GetProductType)
-		apiProductType.PATCH("/:id", middleware.AuthMiddleware("1", true, false), ProductTypeHandler.UpdateProductType)
+		apiProductType.PUT("/:id", middleware.AuthMiddleware("1", true, false), ProductTypeHandler.UpdateProductType)
 		apiProductType.DELETE("/:id", middleware.AuthMiddleware("1", true, false), ProductTypeHandler.DeleteProductType)
 		apiProductType.DELETE("", middleware.AuthMiddleware("1", true, false), ProductTypeHandler.DeleteManyProductType)
 	}
