# internal/db/sqlc/ProductType.sql.go
@@ -96,10 +96,38 @@ func (q *Queries) GetProductTypeByName(ctx context.Context, name string) (Produc
 
 const listProductType = `-- name: ListProductType :many
 SELECT id, name, slug, create_at, update_at FROM "Product_Type"
+WHERE  $3 ::text = '' or name ILIKE concat('%',$3,'%')
+ORDER BY 
+  CASE 
+        WHEN $4 ::varchar = 'name asc' THEN name END ASC,
+  CASE 
+        WHEN $4 = 'name desc' THEN name END DESC,
+  CASE 
+        WHEN $4 = 'slug asc' THEN slug END ASC,
+  CASE 
+        WHEN $4 = 'slug desc' THEN slug END DESC,
+  CASE 
+        WHEN $4 = 'created_date asc' THEN create_at END ASC,
+  CASE 
+        WHEN $4 = 'created_date desc' THEN create_at END DESC
+LIMIT $1
+OFFSET $2
 `
 
-func (q *Queries) ListProductType(ctx context.Context) ([]ProductType, error) {
-	rows, err := q.db.QueryContext(ctx, listProductType)
+type ListProductTypeParams struct {
+	Limit   int32  `json:"limit"`
+	Offset  int32  `json:"offset"`
+	Search  string `json:"search"`
+	OrderBy string `json:"order_by"`
+}
+
+func (q *Queries) ListProductType(ctx context.Context, arg ListProductTypeParams) ([]ProductType, error) {
+	rows, err := q.db.QueryContext(ctx, listProductType,
+		arg.Limit,
+		arg.Offset,
+		arg.Search,
+		arg.OrderBy,
+	)
 	if err != nil {
 		return nil, err
 	}
